<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/centerGColor"
        android:alpha="0.8"
        android:elevation="10dp"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/journalRowUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/petr"
            android:textSize="17sp"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/journalRowShareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_text"
            android:src="@android:drawable/ic_menu_share"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,ImageContrastCheck,RedundantDescriptionCheck" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/journalImageList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/background_photo"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:src="@drawable/image_three" />

        <TextView
            android:id="@+id/journalTitleList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/journalThoughtList"
            android:padding="10dp"
            android:text="@string/thoughts_text"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingStart="10dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/journalTimestampList"
            android:padding="5dp"
            android:text="@string/date_created"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>